fix: method logic leveling by logic moved to timeslot validator.java